# sdet_ss_2024

./: README.md  pyproject.toml
app/: conftest.py  settings.py
app/pages/: base_page.py  locators.py  registration_page.py
app/tests/: conftest.py  test_registration_page.py
